# hermes

./: Cargo.toml  README.md  setup.sh
src/: cli.rs  main.rs
src/commands/: down.rs  erase.rs  mod.rs  prepare.rs  push.rs  up.rs  utils.rs
src/models/: config_file.rs  connector.rs  mod.rs  outcome.rs  remote.rs  service.rs  target.rs
src/models/os/: linux.rs  mod.rs  shell_cmd.rs
src/templates/: nginx.template  startup.template  sysdsrv.template
